Rename hub namespace

--- a/4-training/Dockerfile
+++ b/4-training/Dockerfile
@@ -1,4 +1,4 @@
-FROM webuni/tesseract:4
+FROM minidocks/tesseract:4
 LABEL maintainer="Martin Hasoň <martin.hason@gmail.com>"
 
 RUN apk --update --no-cache add cairo pango \
